# Study

./: .gitignore  CMakeLists.txt  collatz.py  fractal.py  kakaomarco.py
Algorithm/: CMakeLists.txt  Graph.md  activity_selection.c  all_pairs_path.py  change_cases.c  change_min.c  dgim.cpp  dijkstra.cpp  dijkstra.py  fraction_knapscak.c  gcd.c  hackable.c  hanoi_tower.c  heap_sort.cpp  heap_sort.py  huffman_code.c  insertion_sort.cpp  kmp_dfa.c  kmp_fail.c  longest_common_substring.c  matrix_multiplication.cpp  maximum_subarray.cpp  maximum_subarray.py  maxtix_chain.c  median.c  merge_sort.cpp  mst_kruskal.c  mst_prim.c  quicksort_compare.c  reservior.cpp  rod_cutting.c  rod_cutting2.c  sorts.cpp  tree_traveral.py  who_not_finish.cpp
Computer Vision/: histogram.ipynb
DataStructure/: heap.c  vector.c
Database/: Relational Algebra.md  Search.md  Subquery.md  Update.md  View.md  answer.txt  example.txt
Graphics/: Clipping.md  Programmable Rendering Pipeline - History.md  Rasterization.md  Shading.md  Texture Mapping, Blending.md
Graphics/code/Assimp/: Camera.cpp  Camera.h  Object.cpp  Object.h  helloassimp  imgui.ini  info.txt  main.cpp
Graphics/code/Camera/: Camera.cpp  Camera.h  camera  imgui.ini  main.cpp
Graphics/code/Phong/: Camera.cpp  Mesh.cpp  Model.cpp  imgui.ini  main.cpp  phong
Graphics/code/Phong/shader/: fragment.glsl  vertex.glsl
Graphics/code/Tramsformations/: main.cpp
Graphics/code/TriangleMesh/: main.cpp  mesh
Graphics/code/UserInteraction/: imgui.ini  interaction  main.cpp
Graphics/code/UserInteraction/imGui/imGuIZMO/: vGizmo.h
Misc/: alloc_test.py  dynamic_alloc.c  dynamic_alloc.py  parse_test.py  play_with_pointer.c  sort_comparison.py  string_parse.c  string_parse.py
NLP/: 11172-utf16BE.c  11172-utf8.c  CMakeLists.txt  DecisionTree.py  MLP.py  NaiveBayes.py  SVM.py  Untitled.ipynb  bom-utf16.c  bom-utf8.c  convert_table.txt  decomposition.py  generate_dict.py  hancode.c  head_tail.py  hfreq-cp949.c  ks_converter.py  logRegression.py  nltk_test.py  randomForest.py  svm-digits.py  svmLight-ex1.py  temp.py  uni-jamo1.c  uni-jamo2.c
NLP/midterm/: evaluation.py  movie_rating.py  train.py  utils.py
Network/: CRC.py  Control Plane.md  Link Layer.md  Network Layer - Control Plane.md  Network Layer - Data Plane.md  Network Layer.md
OS/: Condition Variable.md  Locks.md  Semaphore.md
Visual Computing/: transform.py
